// Lab 3 \\
// Main Features :
Implemented programmactically adding components using the ngforloop
Added the attributes of img, descriptionTop, descriptionBottom to all appropriate files
Removed all inline styles, moved to appropriate css files
\\

// Lab 4 2/17/22 \\ 
// Main Features :
Added Routing to Home Page, New Releases, Men, Women, and Kids*
Added Components to each Route to match website*
Used different layouts for each Route*
Programmactically added cards to New Releases*
\\

// Lab 5 2/24/22 \\
// Main Features :
Six New Components*
Home Layout: Footer, Sign In Modal, BannerCard;
Men Layout : Men's Footer (Different from Home added with ngforloop), Sign Up Modal, Scrollable Cards (Using new Cards that were added with ngforloop)
\\

// Lab 6 2/24/22 \\ 
// Main Features: 
Created backend RealTime server
Populated it with basic info
Created user info component to get info from backend server
Displayed it on homepage
\\

// Lab 7 3/3/22 \\ 
// Main Features: 
Moved All products from new releases to the backend server
Created a service to interact with the database and retrieve the data
Deleted mock products in mock product list in cards
Displayed on New Releases Page
\\

// Lab 8 3/10/22 \\ 
// Main Features:
Deployed website using Firebase
Implemented Angular Firebase
Changed HTTP service to use the Angular Firebase methods
\\