@@ -1,0 +1,46 @@
+<div class = "container"> 
+    <div class = "row"> 
+        <div class = "col-8">
+            <form #postForm = "ngForm" (ngSubmit)="addProduct(postForm.value)">
+
+                <div class = "input-group">
+                    <span class = "input-group-text">
+                        Image Path:
+                    </span >
+                    <input type = "text" class = "form-control" ngModel name = "img">
+                </div>
+                
+                <div class = "input-group">
+                    <span class = "input-group-text">
+                        Title:
+                    </span >
+                    <input type = "text" class = "form-control" ngModel name = "title">
+                </div>
+                
+                <div class = "input-group">
+                    <span class = "input-group-text">
+                        Price
+                    </span >
+                    <input type = "text" class = "form-control" ngModel name = "price">
+                </div>
+
+                <div class = "input-group">
+                    <span class = "input-group-text">
+                        Genre:
+                    </span >
+                    <input type = "text" class = "form-control" ngModel name = "genre">
+                </div>
+
+                <div class = "input-group">
+                    <span class = "input-group-text">
+                        Number of colors:
+                    </span >
+                    <input type = "text" class = "form-control" ngModel name = "numColors">
+                </div>
+
+                <button type = "submit" class = "btn btn-light" [disabled]="!postForm.valid">Add Product</button>
+
+            </form>
+        </div>
+    </div>
+</div>
