@@ -6,6 +6,7 @@ import { HomeLayoutComponent } from './Layouts/Home/home-layout.component';
 import { WomenLayoutComponent } from './Layouts/Women/women-layout.component';
 import { KidsLayoutComponent } from './Layouts/Kids/kids-layout.component';
 import { NewReleasesLayoutComponent } from './Layouts/NewReleases/new-releases-layout.component';
+import { AdminComponent } from './admin/admin.component';
 
 const routes:Routes = [
   {
@@ -28,6 +29,10 @@ const routes:Routes = [
   {
     path:"new-releases",
     component: NewReleasesLayoutComponent
+  },
+  {
+    path:"admin",
+    component: AdminComponent
   }
 ];
 
