@@ -25,6 +25,9 @@ import { initializeApp,provideFirebaseApp } from '@angular/fire/app';
 import { environment } from '../environments/environment';
 import { provideDatabase,getDatabase } from '@angular/fire/database';
 import {AngularFirestoreModule } from '@angular/fire/compat/firestore';
+import { FormsModule } from '@angular/forms';
+import { AdminComponent } from './admin/admin.component';
+
 @NgModule({
   declarations: [
     AppComponent,
@@ -44,7 +47,8 @@ import {AngularFirestoreModule } from '@angular/fire/compat/firestore';
     MensUpperFooterComponent,
     ScrollCardsComponent,
     SignUpComponent,
-    UserInfoComponent
+    UserInfoComponent,
+    AdminComponent
     
   ],
   imports: [
@@ -52,7 +56,8 @@ import {AngularFirestoreModule } from '@angular/fire/compat/firestore';
     AppRoutingModule,
     HttpClientModule,
     AngularFireModule.initializeApp(environment.firebase),
-    AngularFirestoreModule
+    AngularFirestoreModule,
+    FormsModule
   ],
   providers: [],
   bootstrap: [AppComponent]
